# macleod

./: .pre-commit-config.yaml  Clif.py  ClifLemmaSet.py  ClifModule.py  ColoreOutputCleaner.py  ColoreProverlib.py  Filemgt.py  Ladr.py  Ontology.py  Process.py  README.md  ReasonerSet.py  __init__.py  check_consistency_lib.py  parserlib.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: linting-testing.yml
clif_things/: ClifModule.py
conf/: macleod_linux.conf  macleod_mac.conf
config/: logging.conf  macleod_win.conf
dl/: patterns.py
gui/: Arborist.py  gui_alpha.py  summary.py
gui/gui_beta/: gui_highlighter.py  gui_main.py  gui_settings.py  gui_threads.py  gui_tool.py  gui_widgets.py
logical/: axiom.py  comment.py  commented_axiom.py  connective.py  logical.py  negation.py  quantifier.py  symbol.py  utils.py
macleod_eureka/: Filemgt.py  Process.py
macleod_eureka/clif_things/: ClifModuleSet.py
macleod_eureka/dl/: filters.py  owl.py
macleod_eureka/logical/: symbol.py  utils.py
package code/: pyproject.toml
package code/macleod_eureka/: Ontology.py  check_consistency_lib.py
package code/macleod_eureka/clif_things/: Clif.py  ClifLemmaSet.py
parsing/: parser.py
scripts/: check_consistency.py  check_consistency_all.py  check_consistency_new.py  check_consistencylib.py  check_nontrivial_consistency.py  clif_converter.py  delete_output.py  parser.py  parserlib.py  prove_lemma.py  prove_lemma_all.py  prove_lemma_new.py
src/macleod/: Clif.py  ColoreProver.py  Ontology.py
src/macleod/logical/: comment.py  (+3 more)
(+20 files in other folders)
