[tool.poetry]
name = "macleod"
version = "0.1.0"
description = "Macleod: A Common Logic Environmnet for Ontology Development"
authors = ["RCD"]
license = "CC BY"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
PyQT5 = "^5.15.0"
configparser = "^3.7.3"
textable = "^1.6.1"
pyparsing = "^2.3.1"
ply = "^3.11"
nltk = "^3.5"
rich = "^13.3.1"
tqdm = "^4.46.0"
requests = "^2.23.0"
regex = "^2020.5.14"
pytz = "^2020.1"
joblib = "^0.15.1"
python-dateutil = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
